Fixed asset card long name overflow

--- a/main_app/static/main_app/css/creative.css
+++ b/main_app/static/main_app/css/creative.css
@@ -9138,6 +9138,7 @@ tbody {
   /* Also use .card */
   min-width: 150px;
   max-width: 210px;
+  height: 71px;
   padding: 8px;
   font-weight: bold;
 }
@@ -9154,6 +9155,8 @@ tbody {
   max-width: 33%;
   text-align: center;
   align-self: center;
+  height: 30px;
+  overflow-y: hidden;
 }
 .price {
   font-size: 1.25rem!important;
